--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Event Loop</title>
 </head>
 <body>
-    
+    <h1>All About Event Loop</h1>
 
     <script src="index.js"></script>
 </body>
