--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>All About Event Loop</h1>
 
+    <button id="click">Click Me</button>
+
     <script src="index.js"></script>
 </body>
 </html>
